# linkedin-post-creator

./: pyproject.toml
src/: agents.py  env.py  main.py  tasks.py  tools.py
src/domain/usecases/: create_post.py
src/infra/ai/: crew.py  llm.py
src/infra/ai/agents/: designer.py  editor.py  publisher.py  researcher.py  scrapper.py  social_media.py
src/infra/ai/tasks/: content_creation.py  content_scrapper.py  create_carousel.py  final_response.py  prompt_creation.py  search.py
src/infra/ai/tools/: post_scrapper.py  search.py
src/infra/http/: server.py
src/infra/http/posts/controllers/: create_post.py
src/infra/http/posts/dtos/: create_post.py
