[tool.poetry]
name = "linkedin-post-creator"
version = "0.1.0"
description = ""
authors = ["Bruno Alves <nito.ba.dev@gmail.com>"]
readme = "README.md"

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
dev = 'python3 src/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[tool.poetry.dependencies]
python = "3.12.*"
crewai = {extras = ["tools"], version = "^0.30.11"}
pydantic-settings = "^2.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.8"
httpx = "^0.27.0"
load-dotenv = "^0.1.0"

[tool.ruff]
line-length = 90
extend-exclude = ['migrations']


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
